Validation and status update

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DEV_DB=mongodb://localhost:27017/promotions
 
 
 SECRET_KEY="LittleDidIKnowThat.....*#$*#$&&#$#*$*#*$*#$*#*$*#$**#$***%"
+
+GOOGLE_API_KEY=AIzaSyDnI6wj_nYMy0gdaoEl0U7qLYsFJZu22Zo
