--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "generate-gitignore": "^0.2.6",
+    "google-distance-matrix": "^1.1.1",
     "google-polyline": "^1.0.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
