--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ DB_URL=""
 #NODE_ENV = 'production'
 NODE_ENV = 'development'
 DEV_DB=mongodb://localhost:27017/promotions
+PROD_DB=mongodb://safeboda:safeboda123@ds123532.mlab.com:23532/safeboda
+
 
 
 SECRET_KEY="LittleDidIKnowThat.....*#$*#$&&#$#*$*#*$*#$*#*$*#$**#$***%"
