--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ruyonga/SafetyPromo.git"
   },
   "keywords": [
-    "safet",
+    "safety",
     "boda",
     "promo"
   ],
@@ -30,6 +30,7 @@
     "google-distance-matrix": "^1.1.1",
     "google-polyline": "^1.0.0",
     "jsonwebtoken": "^8.3.0",
+    "mongodb": "^3.1.3",
     "mongoose": "^5.2.7",
     "nodemon": "^1.18.3",
     "randomstring": "^1.1.5"
