--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boda Ride Safety event Promo codes generator",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -34,9 +34,12 @@
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.7",
     "nodemon": "^1.18.3",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "mocha-mongodb": "^0.1.2"
   }
 }
