--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ PROD_DB=mongodb://safeboda:safeboda123@ds123532.mlab.com:23532/safeboda
 
 SECRET_KEY="LittleDidIKnowThat.....*#$*#$&&#$#*$*#*$*#$*#*$*#$**#$***%"
 
-GOOGLE_API_KEY=AIzaSyDnI6wj_nYMy0gdaoEl0U7qLYsFJZu22Zo
+GOOGLE_API_KEY=
